<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mountains"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="127dp"
        android:fontFamily="@font/roboto"
        android:text="@string/current_steps"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCurrentSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="86dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:hint="@string/current_steps_hint"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonLoginScreen"
        android:layout_width="410dp"
        android:layout_height="80dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#00DFDCE6"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/login_or_register"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentSteps" />

    <Button
        android:id="@+id/buttonProgress"
        android:layout_width="410dp"
        android:layout_height="80dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#007457AA"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/button_progress"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginScreen" />

    <Button
        android:id="@+id/buttonGoals"
        android:layout_width="410dp"
        android:layout_height="80dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#007457AA"
        android:fontFamily="@font/roboto"
        android:text="@string/button_goals"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonProgress" />

</androidx.constraintlayout.widget.ConstraintLayout>